--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,30 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+
+  <svg style="display:none">
+    <symbol viewBox="0 0 22 12" id="item-vk"><path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+    	c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
+    	s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1
+    	C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4c0-0.5,0.5-0.9,0.9-1.1C8.3,0.1,9.1,0,10.1,0h0.5c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5v1.6
+    	c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9c0.6-0.9,1-1.9,1.1-2.1c0.1-0.3,0.4-0.7,1.2-0.7h3.4c0.7,0,1.2,0.2,1.3,0.7
+    	c0.2,0.5,0.1,1.3-1.7,3.5c-0.3,0.3-0.5,0.6-0.7,0.9c-0.5,0.4-0.9,1-0.9,1.1s0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3
+    	c0.4,0.6,0.3,1,0.2,1.3c-0.3,0.7-1.2,0.7-1.4,0.8h-2.8C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2
+    	c0.4,0.4,0.7,0.8,1.1,1c0.5,0.3,1,0.3,1,0.3h2.9c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1
+    	c-0.9-0.7-1.3-1.1-1.4-1.7c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3h-3.9c0,0.4-0.5,1.5-1.1,2.4
+    	c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1V3.9V2.6c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1H10
+    	c-0.5,0-1,0-1.4,0.1l0.2,0.2c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3c-0.1,0-0.2,0.1-0.4,0.1C7.5,6.5,6.8,5.8,5.6,4
+    	C5,2.9,4.5,1.8,4.5,1.8s0-0.1-0.1-0.1S4.2,1.6,4.2,1.6H1.3H1.2c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2h1.4c0,0,0.2,0,0.2-0.1v-0.1
+    	c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"/></symbol>
+    <symbol viewBox="0 0 16.1 16" id="item-insta"><path d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1H11.8
+    	 M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0z"/><path d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1S9.7,11.1,8,11.1S4.9,9.7,4.9,8S6.3,4.9,8,4.9 M8,3.9C5.7,3.9,3.9,5.7,3.9,8
+    	s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9z"/><circle fill="#666666" cx="12.3" cy="3.7" r="0.9"/></symbol>
+    <symbol  viewBox="0 0 10 19" id="item-fb"><path d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
+    	h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
+    	z"/></symbol>
+    <symbol viewBox="0 0 60 60" id="partner-logo"><path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></symbol>
+  </svg>
+
     <header class="page-header page-header__preview">
       <div class="main-navigation main-navigation__wrapper container">
         <nav class="main-navigation__block">
@@ -36,6 +60,9 @@
           <h1 class="introduction__title">Функциональное<br> питание для котов</h1>
           <p class="introduction__tagline">Занялся собой? Займись котом!</p>
           <picture>
+            <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.webp, img/index-can-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/index-can-tablet@1x.webp, img/index-can-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/index-can-mobile@1x.webp, img/index-can-mobile@2x.webp 2x">
             <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
             <img class="introduction__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Tagline Cat Energy Pro">
@@ -54,7 +81,9 @@
             <div class="programs__item programs__item--slim">
               <div class="programs__description">
                 <h3 class="programs__item-title">Похудение</h3>
-                <p class="programs__item-specification">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                <div class="programs__item-specification-block">
+                  <p class="programs__item-specification">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                </div>
                 <div class="programs__item-following-block">
                   <a class="programs__item-following-link" href="#">Каталог Slim</a>
                 </div>
@@ -63,7 +92,9 @@
             <div class="programs__item programs__item--pro">
               <div class="programs__description">
                 <h3 class="programs__item-title">Набор массы</h3>
-                <p class="programs__item-specification">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                <div class="programs__item-specification-block">
+                  <p class="programs__item-specification">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                </div>
                 <div class="programs__item-following-block">
                   <a class="programs__item-following-link" href="#">Каталог Pro</a>
                 </div>
@@ -126,6 +157,9 @@
             <div class="toggle__items">
               <div class="toggle__item toggle__item--before">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp, img/before-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp, img/before-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/before-mobile@1x.webp, img/before-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
                   <img class="toggle__item-image toggle__item-image--before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Большой кот">
@@ -133,6 +167,9 @@
               </div>
               <div class="toggle__item toggle__item--after">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp, img/after-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp, img/after-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/after-mobile@1x.webp, img/after-mobile@2x.webp 2x">
                   <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
                   <img class="toggle__item-image toggle__item-image--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="Большой кот">
@@ -145,6 +182,7 @@
                 <div class="toggle__scale">
                   <div class="toggle__scale-range toggle__scale-range--left"></div>
                   <div class="toggle__scale-range toggle__scale-range--right"></div>
+                  <button class="toggle__scale-button" type="bitton"></button>
                 </div>
               </div>
               <label class="toggle__label toggle__label--after" for="live-example-after">Стало</label>
@@ -174,22 +212,21 @@
           <div class="page-footer__social-container social-links">
             <ul class="social-links__list">
               <li class="social-links__item">
-                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><svg class="social-links__item-image social-links__item-vk" width="22" height="12"><use xlink:href="#item-vk"></use></a>
               </li>
               <li class="social-links__item">
-                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><svg class="social-links__item-image social-links__item-inst" width="17" height="17"><use xlink:href="#item-insta"></use></a>
               </li>
               <li class="social-links__item">
-                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><svg class="social-links__item-image social-links__item-fb" width="10" height="19"><use xlink:href="#item-fb"></use></a>
               </li>
             </ul>
           </div>
           <div class="page-footer__partner-container">
-            <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+            <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><svg class="page-footer__partner-logo" width="27" height="34"><use xlink:href="#partner-logo"></a>
           </div>
         </div>
       </section>
     </footer>
-    <script src="js/toggle.js"></script>
   </body>
 </html>
